--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -237,6 +237,11 @@
             </exclusion>
          </exclusions>
       </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>schema-server-core</artifactId>
+         <version>0.21.0-SNAPSHOT</version>
+      </dependency>
 
       <dependency>
          <groupId>javax.websocket</groupId>
