--- a/schema-server-core/pom.xml
+++ b/schema-server-core/pom.xml
@@ -16,6 +16,11 @@
          <groupId>org.springframework.boot</groupId>
          <artifactId>spring-boot-starter-rsocket</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>taxi-writer</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
 
       <dependency>
          <groupId>io.vyne</groupId>
