perf(schema-server): move schema compilation off main & io threads when submitting. Remove unneccessary compilation

--- a/schema-server/src/main/resources/application.yml
+++ b/schema-server/src/main/resources/application.yml
@@ -81,9 +81,9 @@ management:
             include: prometheus,metrics,info,health
 
 
-#logging:
-#   level:
-#      io.netty: DEBUG
+logging:
+   level:
+      io.vyne: DEBUG
 #      org.apache: DEBUG
 #      org.springframework: DEBUG
 #      org.springframework.web.reactive: DEBUG
