--- a/schema-server-core/pom.xml
+++ b/schema-server-core/pom.xml
@@ -75,6 +75,11 @@
          <artifactId>reactor-core</artifactId>
       </dependency>
       <dependency>
+         <groupId>org.kohsuke</groupId>
+         <artifactId>github-api</artifactId>
+         <version>1.313</version>
+      </dependency>
+      <dependency>
          <groupId>com.nhaarman.mockitokotlin2</groupId>
          <artifactId>mockito-kotlin</artifactId>
          <version>2.2.0</version>
