fix(core): schema set was failing instantation. proivde dedicated constructor for jackson that excludes the TaxiSchemas

--- a/schema-management/schema-api/pom.xml
+++ b/schema-management/schema-api/pom.xml
@@ -17,6 +17,11 @@
          <artifactId>vyne-core-types</artifactId>
          <version>${project.version}</version>
       </dependency>
+      <dependency>
+         <groupId>com.fasterxml.jackson.dataformat</groupId>
+         <artifactId>jackson-dataformat-cbor</artifactId>
+         <scope>test</scope>
+      </dependency>
    </dependencies>
 
 </project>
