fix(ui): updated lineage display to use new graph digrams

--- a/vyne-query-service/src/main/web/package.json
+++ b/vyne-query-service/src/main/web/package.json
@@ -26,6 +26,7 @@
     "@angular/compiler": "^12.2.14",
     "@angular/core": "^12.2.14",
     "@angular/forms": "^12.2.14",
+    "@angular/localize": "^12.2.16",
     "@angular/material": "^12.2.13",
     "@angular/platform-browser": "^12.2.14",
     "@angular/platform-browser-dynamic": "^12.2.14",
