--- a/connectors/aws-connectors/s3-connector/pom.xml
+++ b/connectors/aws-connectors/s3-connector/pom.xml
@@ -18,6 +18,11 @@
       </dependency>
       <dependency>
          <groupId>io.vyne</groupId>
+         <artifactId>jdbc-connector</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
          <artifactId>schema-api</artifactId>
          <version>${project.version}</version>
       </dependency>
