--- a/connectors/connectors-core/pom.xml
+++ b/connectors/connectors-core/pom.xml
@@ -23,6 +23,14 @@
          <scope>provided</scope>
       </dependency>
       <dependency>
+         <groupId>org.jooq</groupId>
+         <artifactId>jooq</artifactId>
+         <!-- introducing a version here (ie., not using the
+         one spring bundles) causes spring wiring issues with
+         tests failing they can't find the entity manager. :( -->
+         <!--         <version>3.15.8</version>-->
+      </dependency>
+      <dependency>
          <groupId>io.vyne</groupId>
          <artifactId>vyne-core-types</artifactId>
          <version>${project.version}</version>
