--- a/pom.xml
+++ b/pom.xml
@@ -60,6 +60,9 @@
       <reactor-bom.version>2020.0.24</reactor-bom.version>
       <reactor-netty.version>1.0.24</reactor-netty.version>
       <netty.version>4.1.75.Final</netty.version>
+
+      <junit.jupiter.version>5.9.1</junit.jupiter.version>
+      <junit.vintage.version>5.9.1</junit.vintage.version>
    </properties>
 
    <modules>
@@ -223,6 +226,25 @@
          <groupId>io.kotest</groupId>
          <artifactId>kotest-assertions-core-jvm</artifactId>
          <version>${kotest.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter-api</artifactId>
+         <version>${junit.jupiter.version}</version>
+         <scope>test</scope>
+      </dependency>
+      <dependency>
+         <groupId>org.junit.vintage</groupId>
+         <artifactId>junit-vintage-engine</artifactId>
+         <version>${junit.vintage.version}</version>
+         <scope>test</scope>
+      </dependency>
+
+      <dependency>
+         <groupId>org.junit.jupiter</groupId>
+         <artifactId>junit-jupiter-engine</artifactId>
+         <version>${junit.jupiter.version}</version>
          <scope>test</scope>
       </dependency>
    </dependencies>
@@ -432,6 +454,10 @@
       </extensions>
       <finalName>${project.artifactId}</finalName>
       <plugins>
+         <plugin>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>2.22.2</version>
+         </plugin>
          <plugin>
             <groupId>com.amashchenko.maven.plugin</groupId>
             <artifactId>gitflow-maven-plugin</artifactId>
