fix(connectors/jdbc): fix casting error in types passed in JOOQ queries

--- a/connectors/jdbc-connector/pom.xml
+++ b/connectors/jdbc-connector/pom.xml
@@ -27,6 +27,11 @@
          <groupId>com.zaxxer</groupId>
          <artifactId>HikariCP</artifactId>
       </dependency>
+      <dependency>
+         <groupId>org.taxilang</groupId>
+         <artifactId>taxi-jvm-common</artifactId>
+         <version>${taxi.version}</version>
+      </dependency>
 
       <dependency>
          <groupId>org.taxilang</groupId>
