feat(schema-publisher-cli): added spike of project for publishing schemas via cli

--- a/schema-management/pom.xml
+++ b/schema-management/pom.xml
@@ -25,6 +25,7 @@
       <module>schema-rsocket-publisher</module>
       <module>schema-spring</module>
       <module>schema-http-common</module>
+       <module>schema-publisher-cli</module>
    </modules>
 
 </project>
