--- a/pipelines/pipeline-jet/pom.xml
+++ b/pipelines/pipeline-jet/pom.xml
@@ -335,6 +335,18 @@
          <version>2.7.10</version>
          <scope>test</scope>
       </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-client-spring</artifactId>
+         <version>${project.version}</version>
+      </dependency>
+
+      <!-- Enforce the right dependency version as there's a dependency conflict which pulls in 1.0.1 -->
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-serialization-core-jvm</artifactId>
+         <version>${kotlin.serialization.version}</version>
+      </dependency>
    </dependencies>
 
 
