--- a/pipelines/pipeline-jet/src/main/resources/application.yml
+++ b/pipelines/pipeline-jet/src/main/resources/application.yml
@@ -38,11 +38,6 @@ eureka:
       leaseExpirationDurationInSeconds: 5
 
 vyne:
-   # Use consistent naming across all Vyne components.
-   # Check docs/content/deployment/README.mdx
-   query-service:
-      name: query-service
-      url: http://vyne
    graph:
       vyneGraphBuilderCache:
          baseSchemaCacheSize: 100
@@ -51,6 +46,8 @@ vyne:
       vyneDiscoverGraphQuery:
          schemaGraphCacheSize: 5
          searchPathExclusionsCacheSize: 200000
+   pipelines:
+      query-mode: EMBEDDED
 
 
 management:
@@ -87,9 +84,9 @@ management:
          show-details: always
 logging:
    level:
-     us.fatehi.utility.scheduler: WARN
-     schemacrawler.crawl: WARN
-     schemacrawler.loader.attributes: WARN
-     schemacrawler.loader.weakassociations: WARN
-     schemacrawler.loader.counts: WARN
-     schemacrawler.tools.utility: WARN
+      us.fatehi.utility.scheduler: WARN
+      schemacrawler.crawl: WARN
+      schemacrawler.loader.attributes: WARN
+      schemacrawler.loader.weakassociations: WARN
+      schemacrawler.loader.counts: WARN
+      schemacrawler.tools.utility: WARN
