--- a/vyne-spring/pom.xml
+++ b/vyne-spring/pom.xml
@@ -146,6 +146,11 @@
          <artifactId>hazelcast-eureka-one</artifactId>
          <version>2.0.1</version>
       </dependency>
+      <dependency>
+         <groupId>io.vyne</groupId>
+         <artifactId>vyne-client</artifactId>
+         <version>${project.version}</version>
+      </dependency>
 
    </dependencies>
    <build>
