--- a/vyne-query-service/pom.xml
+++ b/vyne-query-service/pom.xml
@@ -374,6 +374,12 @@
          <groupId>org.jetbrains.kotlinx</groupId>
          <artifactId>kotlinx-serialization-cbor</artifactId>
       </dependency>
+      <!-- TODO Remove once the right version is picked automatically. This was needed due to wire-compiler of protobuf-utils pulling version 1.0.1 -->
+      <dependency>
+         <groupId>org.jetbrains.kotlinx</groupId>
+         <artifactId>kotlinx-serialization-core-jvm</artifactId>
+         <version>${kotlin.serialization.version}</version>
+      </dependency>
       <dependency>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
