feat(query-service): add Lambda support

--- a/vyne-query-service/Dockerfile
+++ b/vyne-query-service/Dockerfile
@@ -1,4 +1,4 @@
-FROM eclipse-temurin:11.0.16.1_1-jre-focal
+FROM eclipse-temurin:11.0.16.1_1-jre-focal as builder
 
 RUN apt-get update && apt-get install zip -y
 
@@ -9,4 +9,6 @@ RUN cd /opt/service && unzip vyne.zip
 
 WORKDIR /opt/service/
 
-CMD $BEFORE_START_COMMAND && vyne/bin/vyne  -Dspring.profiles.active=${PROFILE} $OPTIONS
+FROM public.ecr.aws/lambda/java:11
+COPY --from=builder /opt/service/ /opt/service/
+CMD $BEFORE_START_COMMAND && vyne/bin/vyne -Dspring.profiles.active=${PROFILE} $OPTIONS
