--- a/pom.xml
+++ b/pom.xml
@@ -364,7 +364,7 @@
          <dependency>
             <groupId>net.openhft</groupId>
             <artifactId>chronicle-bom</artifactId>
-            <version>1.16.215</version>
+            <version>2.24ea25</version>
             <type>pom</type>
             <scope>import</scope>
          </dependency>
